# ComputerVisionProjects

Augmented Reality and Camera Calibration/: CMakeLists.txt  main.cpp  readme.txt
Content Based Image Recognition/: CMakeLists.txt  main.cpp  readfiles.cpp  readme.txt
Kernel implementation/: CMakeLists.txt  filters.cpp  filters.h  imgDisplay.cpp  vidDisplay.cpp
Realtime Object Recognition/: CMakeLists.txt  main.cpp  readme.txt  recog.cpp  recog.h
